package com.github.TeamRocketBalleBalle.Ricktionary.Resources.Constants;

public class OrderTypeLookupTable {
   public static final byte INITIALISE = 0;
   public static final byte GAME_STATE = 1;
   public static final byte LOAD_SCENE = 2;
   public static final byte LOAD_IMAGE = 3;
}
