package com.github.TeamRocketBalleBalle.Ricktionary.Resources.Constants;


public class PacketType {
   public static final byte INITIALISE  = 0;
   public static final byte ORDER       = 1;
   public static final byte ORDER_REPLY = 2;
   public static final byte LOAD_SCENE  = 3;
   public static final byte LOAD_IMG    = 4;
   public static final byte GAME_INPUT  = 5;
   public static final byte GAME_STATE  = 6;
   public static final byte CHAT_MESSAGE= 7;
   public static final byte LAST        = 8;
}
